// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LandingPage > rendrer innlogget side 1`] = `
<DocumentFragment>
  <div
    class="_landingPage_6ae597"
  >
    <div
      class="navds-stack navds-vstack"
      style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-10); --__ac-stack-direction-xs: column;"
    >
      <section>
        <div
          class="navds-stack navds-vstack"
          style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-2); --__ac-stack-direction-xs: column;"
        >
          <h2
            class="navds-heading navds-heading--medium"
          >
            landingsside.for.deg.foedt.foer.1963
          </h2>
          <p
            class="navds-body-long navds-body-long--medium"
          >
            landingsside.du.maa.bruke.detaljert
          </p>
          <div>
            <button
              class="_button_6ae597 navds-button navds-button--secondary navds-button--medium"
              data-testid="landingside-first-button"
            >
              <span
                class="navds-label"
              >
                landingsside.button.detaljert_kalkulator
              </span>
            </button>
          </div>
        </div>
      </section>
      <section>
        <div
          class="navds-stack navds-vstack"
          style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: column;"
        >
          <h2
            class="navds-heading navds-heading--medium"
          >
            landingsside.for.deg.foedt.etter.1963
          </h2>
          <p
            class="navds-body-long navds-body-long--medium"
          >
            landingsside.velge_mellom_detaljert_og_enkel
          </p>
          <div>
            <p
              class="navds-body-long navds-body-long--medium"
            >
              landingsside.velge_mellom_detaljert_og_enkel_2
            </p>
            <ul>
              <li>
                landingsside.liste.1
              </li>
              <li>
                landingsside.liste.2
              </li>
              <li>
                landingsside.liste.3
              </li>
              <li>
                landingsside.liste.4
              </li>
            </ul>
            <div
              class="navds-stack navds-hstack"
              style="--__ac-stack-wrap: wrap; --__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: row;"
            >
              <button
                class="navds-button navds-button--secondary navds-button--medium"
                data-testid="landingside-detaljert-kalkulator-button"
              >
                <span
                  class="navds-label"
                >
                  landingsside.button.detaljert_kalkulator
                </span>
              </button>
              <button
                class="navds-button navds-button--secondary navds-button--medium"
                data-testid="landingside-enkel-kalkulator-button"
              >
                <span
                  class="navds-label"
                >
                  landingsside.button.enkel_kalkulator
                </span>
              </button>
            </div>
          </div>
        </div>
      </section>
    </div>
    <a
      class="navds-link _link_6ae597 navds-link--action navds-link--inline-text"
      href="/personopplysninger"
      target="_blank"
    >
      landingsside.link.personopplysninger
      <svg
        aria-labelledby="title-r1"
        fill="none"
        focusable="false"
        height="1.25rem"
        role="img"
        viewBox="0 0 24 24"
        width="1.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="title-r1"
        >
          application.global.external_link
        </title>
        <path
          clip-rule="evenodd"
          d="M11.75 4a.75.75 0 0 1 .75-.75H20a.748.748 0 0 1 .75.75v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1-.75-.75ZM5 8.75a.25.25 0 0 0-.25.25v10c0 .138.112.25.25.25h10a.25.25 0 0 0 .25-.25v-7a.75.75 0 0 1 1.5 0v7A1.75 1.75 0 0 1 15 20.75H5A1.75 1.75 0 0 1 3.25 19V9c0-.966.784-1.75 1.75-1.75h7a.75.75 0 0 1 0 1.5H5Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </a>
  </div>
</DocumentFragment>
`;

exports[`LandingPage > rendrer utlogget side 1`] = `
<DocumentFragment>
  <div
    class="_landingPage_6ae597"
  >
    <div
      class="navds-stack navds-vstack"
      style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-10); --__ac-stack-direction-xs: column;"
    >
      <section>
        <div
          class="navds-stack navds-vstack"
          style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-2); --__ac-stack-direction-xs: column;"
        >
          <h2
            class="navds-heading navds-heading--medium"
          >
            landingsside.for.deg.foedt.foer.1963
          </h2>
          <p
            class="navds-body-long navds-body-long--medium"
          >
            landingsside.du.maa.bruke.detaljert
          </p>
          <div>
            <button
              class="_button_6ae597 navds-button navds-button--secondary navds-button--medium"
              data-testid="landingside-first-button"
            >
              <span
                class="navds-label"
              >
                landingsside.button.detaljert_kalkulator_utlogget
              </span>
            </button>
          </div>
        </div>
      </section>
      <section>
        <div
          class="navds-stack navds-vstack"
          style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: column;"
        >
          <h2
            class="navds-heading navds-heading--medium"
          >
            landingsside.for.deg.foedt.etter.1963
          </h2>
          <p
            class="navds-body-long navds-body-long--medium"
          >
            landingsside.velge_mellom_detaljert_og_enkel
          </p>
          <div>
            <p
              class="navds-body-long navds-body-long--medium"
            >
              landingsside.velge_mellom_detaljert_og_enkel_2
            </p>
            <ul>
              <li>
                landingsside.liste.1
              </li>
              <li>
                landingsside.liste.2
              </li>
              <li>
                landingsside.liste.3
              </li>
              <li>
                landingsside.liste.4
              </li>
            </ul>
            <div
              class="navds-stack navds-hstack"
              style="--__ac-stack-wrap: wrap; --__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: row;"
            >
              <button
                class="navds-button navds-button--secondary navds-button--medium"
                data-testid="landingside-detaljert-kalkulator-button"
              >
                <span
                  class="navds-label"
                >
                  landingsside.button.detaljert_kalkulator_utlogget
                </span>
              </button>
              <button
                class="navds-button navds-button--secondary navds-button--medium"
                data-testid="landingside-enkel-kalkulator-button"
              >
                <span
                  class="navds-label"
                >
                  landingsside.button.enkel_kalkulator_utlogget
                </span>
              </button>
            </div>
          </div>
        </div>
      </section>
      <section>
        <div
          class="navds-stack navds-vstack"
          style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-2); --__ac-stack-direction-xs: column;"
        >
          <h2
            class="navds-heading navds-heading--medium"
          >
            landingsside.text.uinnlogget_kalkulator
          </h2>
          <p
            class="navds-body-long navds-body-long--medium"
          >
            landingsside.body.uinnlogget_kalkulator
          </p>
          <div>
            <button
              class="_button_6ae597 navds-button navds-button--secondary navds-button--medium"
              data-testid="landingside-uinnlogget-kalkulator-button"
            >
              <span
                class="navds-label"
              >
                landingsside.button.uinnlogget_kalkulator
              </span>
            </button>
          </div>
        </div>
      </section>
    </div>
    <a
      class="navds-link _link_6ae597 navds-link--action navds-link--inline-text"
      href="/personopplysninger"
      target="_blank"
    >
      landingsside.link.personopplysninger
      <svg
        aria-labelledby="title-r2"
        fill="none"
        focusable="false"
        height="1.25rem"
        role="img"
        viewBox="0 0 24 24"
        width="1.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="title-r2"
        >
          application.global.external_link
        </title>
        <path
          clip-rule="evenodd"
          d="M11.75 4a.75.75 0 0 1 .75-.75H20a.748.748 0 0 1 .75.75v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1-.75-.75ZM5 8.75a.25.25 0 0 0-.25.25v10c0 .138.112.25.25.25h10a.25.25 0 0 0 .25-.25v-7a.75.75 0 0 1 1.5 0v7A1.75 1.75 0 0 1 15 20.75H5A1.75 1.75 0 0 1 3.25 19V9c0-.966.784-1.75 1.75-1.75h7a.75.75 0 0 1 0 1.5H5Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </a>
  </div>
</DocumentFragment>
`;
